// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`analysisAddForm should have working getBoolField method 1`] = `
Object {
  "defaultValue": null,
  "mapper": Object {
    "fromRaw": [Function],
    "toRaw": [Function],
  },
  "name": "someBool",
  "rawValue": false,
  "validator": Object {},
  "value": null,
}
`;

exports[`analysisAddForm should have working getStrField method 1`] = `
Object {
  "defaultValue": null,
  "mapper": Object {
    "fromRaw": [Function],
    "toRaw": [Function],
  },
  "name": "someStr",
  "rawValue": null,
  "validator": Object {
    "rawValidator": null,
  },
  "value": null,
}
`;
